--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ plugins {
     id "com.jfrog.artifactory" version "4.9.8"
 }
 
+apply plugin: 'java'
 apply plugin: 'maven-publish'
 apply plugin: "com.jfrog.artifactory"
 group 'com.vcgdev.common'
@@ -96,6 +97,12 @@ repositories {
 dependencies {
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.guava:guava:29.0-jre'
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
     implementation gradleApi()
     implementation localGroovy()
+}
+
+test {
+    useJUnitPlatform()
 }
