--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,10 @@ dependencies {
     implementation 'com.google.guava:guava:29.0-jre'
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
     testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
+    compileOnly 'org.projectlombok:lombok:1.18.18'
+	annotationProcessor 'org.projectlombok:lombok:1.18.18'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.18'   
+    //implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
     implementation gradleApi()
     implementation localGroovy()
 }
