--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ publishing {
     publications {
         mavenJava(MavenPublication) {
             artifactId = 'common-rest'
-            version = '0.0.3'
+            version =  "$version"
             from components.java
             artifact sourcesJar
             artifact javadocJar
